fixing overflow

--- a/client/styles.css
+++ b/client/styles.css
@@ -666,6 +666,7 @@ html, body {
 	width: 100%;
 	height: 100%;
 	position: relative;
+	overflow: hidden;
 }
 
 #subsTopBar {
